<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/createButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_new_instance_button" />

        <Button
            android:id="@+id/removeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_del_instance_button" />

        <Button
            android:id="@+id/statusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_view_status_button" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/serializeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_serialize_button" />

        <Button
            android:id="@+id/deserializeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_deserialize_button" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/addElementButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_add_element_button" />

        <Button
            android:id="@+id/delElementButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_del_element_button" />
    </LinearLayout>

    <TextView
        android:id="@+id/textArea"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.79"
        android:text="" />

</LinearLayout>